testdata/baselines/reference/compiler/fuzzRegressionAwaitImportParsing.errors.txt
fuzzRegressionAwaitImportParsing.ts(1,2): error TS1005: ';' expected.
fuzzRegressionAwaitImportParsing.ts(1,3): error TS1128: Declaration or statement expected.
fuzzRegressionAwaitImportParsing.ts(1,4): error TS2304: Cannot find name 'await'.
fuzzRegressionAwaitImportParsing.ts(1,10): error TS1005: ';' expected.
fuzzRegressionAwaitImportParsing.ts(1,23): error TS1002: Unterminated string literal.


==== fuzzRegressionAwaitImportParsing.ts (5 errors) ====
    0))await!import "00000
     ~
!!! error TS1005: ';' expected.
      ~
!!! error TS1128: Declaration or statement expected.
       ~~~~~
!!! error TS2304: Cannot find name 'await'.
             ~~~~~~
!!! error TS1005: ';' expected.
                          
!!! error TS1002: Unterminated string literal.
    